@@ -59,6 +59,7 @@ changes are compared to KGySoft.Drawing v6.3.2. Breaking changes can be interpre
     of the KGySoft.Drawing package. When recompiling C# sources, this is not a breaking change if you use the
     KGySoft.Drawing package and use these methods as extensions (without the class name).
   + New Clone/CopyTo/DrawInto/Clear/TransformColors/Quantize/Dither overloads with IAsyncContext parameter.
+  + New Resize/BeginResize/EndResize/ResizeAsync methods
 ! IQuantizingSession interface:
   ! New IsGrayscale property. Not a breaking change when targeting at least .NET Core 3.0/.NET Standard 2.1 where
     this property returns false if not implemented.
